--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
     <div class="container">
         <header id="header" class="codrops-header">
-            <h1>Design Portfolio</h1>
-            <span class="message">This mobile version does not have the slideshow switch</span>
+            <h1>洪榮豪作品 <span>Howard Portfolio</span></h1>
+            <!-- <span class="message">This mobile version does not have the slideshow switch</span> -->
             <button class="slider-switch">Switch view</button>
         </header>
         <div id="overlay" class="overlay">
@@ -63,7 +63,7 @@
                     </div>
                     <div class="slide" data-content="content-4">
                         <div class="img-wrap"><img src="004.jpg" alt="img4" /></div>
-                        <h2>10.2021 <span>影音串流平台 / UX.UI</span><a href="http://104.199.202.52:8081/" target="_blank">網站連結</a></h2>
+                        <h2>10.2021 <span>影音串流平台 / UIUX flow</span><a href="http://104.199.202.52:8081/" target="_blank">網站連結</a></h2>
                         <button class="content-switch">Read more</button>
                     </div>
                     <div class="slide" data-content="content-5">
