--- a/index.html
+++ b/index.html
@@ -19,9 +19,6 @@
     <!-- 3d slider
     <link rel="stylesheet" href="carrousel.css" /> 
     -->
-    <!-- slider
-    <link href="_css/responsive-layered-slider.css" rel="stylesheet" type="text/css" /> 
-    -->
     <!-- 圖片show -->
     <link rel="stylesheet" href="css/chromagallery.min.css">
 </head>
@@ -53,7 +50,7 @@
                     </div>
                     <div class="slide" data-content="content-2">
                         <div class="img-wrap"><img src="002.jpg" alt="img2" /></div>
-                        <h2>03.2020 <span>learn up 教學平台 / UI</span><a href="https://www.learnup.com.tw/" target="_blank">網站連結</a></h2>
+                        <h2>03.2020 <span>learn up 教學平台 / UI. CI Design</span><a href="https://www.learnup.com.tw/" target="_blank">網站連結</a></h2>
                         <button class="content-switch">Read more</button>
                     </div>
                     <div class="slide" data-content="content-3">
@@ -63,12 +60,12 @@
                     </div>
                     <div class="slide" data-content="content-4">
                         <div class="img-wrap"><img src="004.jpg" alt="img4" /></div>
-                        <h2>10.2021 <span>影音串流平台 / UIUX flow</span><a href="http://104.199.202.52:8081/" target="_blank">網站連結</a></h2>
+                        <h2>10.2021 <span>影音串流平台 / UIUX flow. CI Design</span><a href="http://104.199.202.52:8081/" target="_blank">網站連結</a></h2>
                         <button class="content-switch">Read more</button>
                     </div>
                     <div class="slide" data-content="content-5">
                         <div class="img-wrap"><img src="images/501/101.jpg" alt="img5" /></div>
-                        <h2>2021 <span>星城支援 / Graphic</span></h2>
+                        <h2>2021 <span>星城支援 / Flat Design</span></h2>
                         <button class="content-switch">Read more</button>
                     </div>
                 </div>
@@ -302,9 +299,6 @@
             });
         });
     </script> 
-    -->
-    <!-- slider
-    <script type="text/javascript" src="_scripts/responsive-layered-slider.js"></script> 
     -->
     <!-- 圖片show -->
     <script src="js/chromagallery.pkgd.min.js"></script>
