--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>洪榮豪 - 介面設計作品</title>
+    <title>洪榮豪 - 介面設計作品集</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' />
